--- a/contact.css
+++ b/contact.css
@@ -13,7 +13,7 @@
   
   .header-panel {
     width: 1005;
-    height: 90px;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,10 +25,11 @@
   }
   .logo {
     background-image: url(./Assests/logo.png);
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
     background-size: cover;
     margin-left: -30px;
+    margin-top: 10px;
   }
   
   .header-option ul a {
