--- a/style.css
+++ b/style.css
@@ -13,11 +13,12 @@ header {
 
 .header-panel {
   width: 1005;
-  height: 90px;
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
   justify-content: space-evenly;
+  font-family: "Times New Roman", Times, serif;
 }
 .header-logo {
   width: 120px;
@@ -25,10 +26,11 @@ header {
 }
 .logo {
   background-image: url(./Assests/logo.png);
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
   background-size: cover;
   margin-left: -30px;
+  margin-top: 10px;
 }
 
 .header-option ul a {
@@ -39,6 +41,9 @@ header {
   text-decoration: none;
   padding: 0px 25px 0px 0px;
   margin: 0 10px;
+}
+.header-option ul {
+  margin: 0;
 }
 .header-option ul a:hover {
   opacity: 1;
@@ -69,12 +74,12 @@ header {
 .hero-disc {
   position: absolute;
   margin-top: -150px;
-  margin-left: 450px;
+  margin-left: 500px;
   width: 620px;
   height: 100px;
   color: rgba(43, 43, 43, 0.6);
   font-size: 22px;
-  font-family: "Playwrite CU", cursive;
+  font-family: "Playwrite CU";
   background-color: rgba(255, 255, 179, 0.3);
 }
 @media (max-width: 1120px) {
@@ -185,7 +190,7 @@ header {
   font-optical-sizing: auto;
   font-size: 25px;
   font-style: normal;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 .card .card-disc {
   height: 50%;
@@ -193,7 +198,7 @@ header {
   color: #7c7c7c;
   font-size: 18px;
   line-height: 1.5;
-  margin: 50px 20px 0px 20px;
+  margin: 20px 20px 0px 20px;
 }
 .card:hover {
   box-shadow: 12px 12px 24px rgba(0, 0, 0, 0.5), -12px -12px 24px white;
